@@ -1,5 +1,9 @@
 2003-02-02  Stefan Petersen  <spe@stacken.kth.se>
 
+	* src/gerbv.c: Now you can move around layers in the right
+	  sidebar so you can select in which order the layers should 
+	  be presented.
+
 	* src/draw.c, src/drill.c, src/gerb_image.[hc], src/gerber.c:
 	  A new system to keep track of mm and inches. Everything is
 	  still drawn based on inches and min/max is also stored as
